@@ -1010,8 +1010,8 @@ configuration.  See the variable `gnus-cite-attribution-suffix'."
 (defcustom message-citation-line-format "On %a, %b %d %Y, %N wrote:\n"
   "Format of the \"Whomever writes:\" line.
 
-The string is formatted using `format-spec'.  The following
-constructs are replaced:
+The string is formatted using `format-spec'.  The following constructs
+are replaced:
 
   %f   The full From, e.g. \"John Doe <john.doe@example.invalid>\".
   %n   The mail address, e.g. \"john.doe@example.invalid\".
@@ -1019,11 +1019,14 @@ constructs are replaced:
        back to the mail address.
   %F   The first name if present, e.g.: \"John\".
   %L   The last name if present, e.g.: \"Doe\".
+  %Z, %z   The time zone in the numeric form, e.g.:\"+0000\".
 
 All other format specifiers are passed to `format-time-string'
-which is called using the date from the article your replying to.
-Extracting the first (%F) and last name (%L) is done
-heuristically, so you should always check it yourself.
+which is called using the date from the article your replying to, but
+the date in the formatted string will be expressed in the author's
+time zone as much as possible.
+Extracting the first (%F) and last name (%L) is done heuristically,
+so you should always check it yourself.
 
 Please also read the note in the documentation of
 `message-citation-line-function'."
@@ -3964,9 +3967,13 @@ This function uses `mail-citation-hook' if that is non-nil."
 (defvar gnus-extract-address-components)
 
 (autoload 'format-spec "format-spec")
+(autoload 'gnus-date-get-time "gnus-util")
 
-(defun message-insert-formatted-citation-line (&optional from date)
+(defun message-insert-formatted-citation-line (&optional from date tz)
   "Function that inserts a formatted citation line.
+The optional FROM, and DATE are strings containing the contents of
+the From header and the Date header respectively.  The optional TZ
+is a number of seconds, overrides the time zone of DATE.
 
 See `message-citation-line-format'."
   ;; The optional args are for testing/debugging.  They will disappear later.
@@ -3974,7 +3981,7 @@ See `message-citation-line-format'."
   ;; (with-temp-buffer
   ;;   (message-insert-formatted-citation-line
   ;;    "John Doe <john.doe@example.invalid>"
-  ;;    (current-time))
+  ;;    (message-make-date))
   ;;   (buffer-string))
   (when (or message-reply-headers (and from date))
     (unless from
@@ -3991,28 +3998,43 @@ See `message-citation-line-format'."
 	   (net (car (cdr data)))
 	   (name-or-net (or (car data)
 			    (car (cdr data)) from))
-	   (replydate
-	    (or
-	     date
-	     ;; We need Gnus functionality if the user wants date or time from
-	     ;; the original article:
-	     (when (string-match "%[^fnNFL]" message-citation-line-format)
-	       (autoload 'gnus-date-get-time "gnus-util")
-	       (gnus-date-get-time (mail-header-date message-reply-headers)))))
+	   (time
+	    (when (string-match "%[^fnNFL]" message-citation-line-format)
+	      (cond ((numberp (car-safe date)) date) ;; backward compatibility
+		    (date (gnus-date-get-time date))
+		    (t
+		     (gnus-date-get-time
+		      (setq date (mail-header-date message-reply-headers)))))))
+	   (tz (or tz
+		   (when (stringp date)
+		     (nth 8 (parse-time-string date)))))
 	   (flist
 	    (let ((i ?A) lst)
 	      (when (stringp name)
 		;; Guess first name and last name:
-                (let* ((names (delq nil (mapcar (lambda (x)
-                                                 (if (string-match "\\`\\(\\w\\|[-.]\\)+\\'" x) x nil))
-                                               (split-string name "[ \t]+"))))
-                      (count (length names)))
-                  (cond ((= count 1) (setq fname (car names)
-                                           lname ""))
-                        ((or (= count 2) (= count 3)) (setq fname (car names)
-                                                            lname (mapconcat 'identity (cdr names) " ")))
-                        ((> count 3) (setq fname (mapconcat 'identity (butlast names (- count 2)) " ")
-                                           lname (mapconcat 'identity (nthcdr 2 names) " "))) )
+		(let* ((names (delq
+			       nil
+			       (mapcar
+				(lambda (x)
+				  (if (string-match "\\`\\(\\w\\|[-.]\\)+\\'"
+						    x)
+				      x
+				    nil))
+				(split-string name "[ \t]+"))))
+		       (count (length names)))
+		  (cond ((= count 1)
+			 (setq fname (car names)
+			       lname ""))
+			((or (= count 2) (= count 3))
+			 (setq fname (car names)
+			       lname (mapconcat 'identity (cdr names) " ")))
+			((> count 3)
+			 (setq fname (mapconcat 'identity
+						(butlast names (- count 2))
+						" ")
+			       lname (mapconcat 'identity
+						(nthcdr 2 names)
+						" "))))
                   (when (string-match "\\(.*\\),\\'" fname)
                     (let ((newlname (match-string 1 fname)))
                       (setq fname lname lname newlname)))))
@@ -4042,7 +4064,7 @@ See `message-citation-line-format'."
 			       (>= i ?a)))
 		  (push i lst)
 		  (push (condition-case nil
-			    (format-time-string (format "%%%c" i) replydate)
+			    (gmm-format-time-string (format "%%%c" i) time tz)
 			  (error (format ">%c<" i)))
 			lst))
 		(setq i (1+ i)))
